<resources>
    <string name="app_name">27PreferenceFragment</string>
    <string name="pets_category">Pet settings</string>
    <string name="pets_name">Your pet\'s name</string>
    <string name="pets_name_summary">Change the name and restart this app.</string>
    <string name="pets_species">Your pet\'s species</string>
    <string name="pets_species_summary">There are so many beautiful critters...</string>
    <string name="pet_is_alive">Is it alive?</string>
    <string name="pet_is_alive_summary">Does it breathe? Does it move?</string>

    <!-- This is what is displayed -->
    <string-array name="pet_species">
        <item>a cat</item>
        <item>a pony</item>
        <item>an alligator</item>
        <item>a tortoise</item>
        <item>a boulder</item>
    </string-array>

    <!-- This is what is saved -->
    <string-array name="pet_species_values">
        <item>de.hhu.animal.mammal.feline</item>
        <item>de.hhu.animal.mammal.equine</item>
        <item>de.hhu.animal.reptile.alligator</item>
        <item>de.hhu.animal.reptile.tortoise</item>
        <item>de.hhu.rock.boulder</item>
    </string-array>
</resources>
